<resources>
    <string name="app_name">Winter Coding 일정관리 앱</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="tab_monthly">Monthly</string>
    <string name="tab_weekly">Weekly</string>
    <string name="tab_daily">Daily</string>
    <string name="developer">김민우\ngithub.com/dragon20002</string>
    <!-- Strings related to manage schedule -->
    <string name="title_activity_register_schedule">일정 관리</string>
    <string name="prompt_content">제목</string>
    <string name="date">날짜</string>
    <string name="action_done">완료</string>
    <string name="action_cancel">취소</string>
    <string name="no_todo">일정이 없습니다</string>
    <string name="delete">삭제</string>
</resources>
