<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.CalendarActivity">

    <android.support.v4.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toTopOf="@id/appbar"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 하단 탭 -->
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintBottom_toBottomOf="parent">

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIndicatorGravity="top">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_monthly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_monthly" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_weekly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_weekly" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem_daily"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tab_daily" />

        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

</android.support.constraint.ConstraintLayout>