<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ManageScheduleActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/manage_schedule_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/manage_schedule_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_register_schedule" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/manage_schedule_form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@id/manage_schedule_delete"
        app:layout_constraintTop_toBottomOf="@id/manage_schedule_appbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/schedule_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_content"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/manage_schedule_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="5dp"
                android:text="@string/date"
                android:textColor="@android:color/darker_gray"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@id/schedule_content" />

            <DatePicker
                android:id="@+id/manage_schedule_date_picker"
                style="@android:style/Widget.DatePicker"
                android:layout_width="wrap_content"
                android:layout_height="140dp"
                android:layout_margin="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/manage_schedule_date_label" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/manage_schedule_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:background="@color/colorSecond"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

</android.support.constraint.ConstraintLayout>